# stratisd

./: .clippy.toml  .gitignore  .isort.cfg  .mergify.yml  .packit.yaml  .travis.yml  .yamllint.yaml  :w  CHANGES.txt  Cargo.toml  Makefile  Makefile_dependencies  README.md  README.rst  README_tests.md  _typos.toml  build.rs  check.py  justfile  org.storage.stratis1.service  org.storage.stratis2.service  rust-toolchain.toml  rustfmt.toml  setup.py  stratisd.conf  stratisd.service  systemd-header.h  tox.ini
.githooks/: pre-commit
.github/actions/stratisd-modify-action/: action.yml
.github/workflows/: cargo.yml  dummy.yml  fedora.yml  main.yml  modules.yml  nightly.yml  python.yml  release.yml  rust.yml  support.yml  ubuntu.yml  valgrind.yml  weekly.yml
90stratis/: 11-stratisd.rules  module-setup.sh  stratis-encrypted-rootfs.sh
code_maintenance/: .isort.cfg  Makefile  README.md  _utils.py  check.py  compare_fedora_versions  create_release.py  set_lower_bounds  update_cargo_crates.py  updates.sh  upload_vendor_asset.py
container_files/: Containerfile-fedora  Containerfile-tang  Containerfile-ubuntu
copr-rpm/: stratisd.spec
debian/: builddeb.sh  control  copyright  rules
developer_tools/: .isort.cfg  Makefile  README.md  cargo.py  check.py  stratis_migrate_symlinks.sh  update_cargo_crates.py
developer_tools/cargo/: cargo.py
developer_tools/cargo/platform_parser/: platform_parser.py
developer_tools/stratis_id/: stratis_id.py
docs/: README.docs  RELNOTES-0.5.md  stratis-dumpmetadata.txt  stratisd.txt
dracut/: 90-stratis.conf
dracut/50stratis/: 61-stratisd.rules  module-setup.sh.in  stratis-rootfs-setup  stratisd-min.service.in
dracut/90stratis/: 14-stratisd.rules  module-setup.sh  stratis-rootfs-setup  stratisd-min.service
dracut/90stratis-clevis/: module-setup.sh  stratis-clevis-rootfs-setup
lib/: Makefile  libstratis-private.h  libstratis.c  libstratis.pc.in  simulator.c  stratis-common.h
lib/stratis/: libstratis.h
plans/: all.fmf  cockpit.fmf  python-based.fmf  testing_3.5.2.fmf  testing_HEAD.fmf
scripts/: Makefile  check.py  stratis_id.py  uml_graphs.rs
scripts/stratis-fstab-generator/: Cargo.toml
scripts/stratis-fstab-generator/src/: main.rs
scripts/stratis_id/: _crc32.py  stratis_id.py
scripts/stratis_udev/: stratis_uuids_to_names.py
src/: async_fd.rs  blockdev.rs  cache.rs  consts.rs  dbus_api.rs  dbus_consts.rs  dmdevice.rs  engine.rs  lib.rs  macros.rs  main.rs  manager.rs  pool.rs  sim_engine.rs  stratis.rs  types.rs  util.rs
src/dbus/: consts.rs  macros.rs  mod.rs  signal.rs  types.rs  udev.rs  util.rs
src/dbus/blockdev/: mod.rs  shared.rs
src/dbus/filesystem/: mod.rs  shared.rs
src/dbus/manager/: manager_3_9.rs  mod.rs
src/dbus/pool/: mod.rs  shared.rs
src/dbus_api/: api.rs  blockdev.rs  connection.rs  consts.rs  event_handler.rs  filesystem.rs  macros.rs  message.rs  mod.rs  pool.rs  tree.rs  types.rs  udev.rs  util.rs
src/dbus_api/api/: mod.rs  prop_conv.rs  shared.rs
src/dbus_api/blockdev/: mod.rs  prop_conv.rs  shared.rs
src/dbus_api/device_set/: mod.rs
src/dbus_api/filesystem/: mod.rs  prop_conv.rs  shared.rs
src/dbus_api/pool/: mod.rs  prop_conv.rs  shared.rs
src/engine/: devlinks.rs  engine.rs  errors.rs  event.rs  macros.rs  mod.rs  shared.rs  structures.rs  types.rs  udev.rs
src/jsonrpc/: consts.rs  interface.rs  mod.rs  transport.rs  utils.rs
src/sim_engine/: blockdev.rs  cache.rs  consts.rs  engine.rs  filesystem.rs  mod.rs  pool.rs  randomization.rs
src/strat_engine/: blockdev.rs  consts.rs  engine.rs  lineardev.rs  mod.rs  pool.rs  serialize.rs.in  util.rs
src/stratis/: buff_log.rs  command_line.rs  dbus_support.rs  dm.rs  errors.rs  keys.rs  mod.rs  run.rs  shadow.rs  stratis.rs  timer.rs  udev_monitor.rs  util.rs
src/stratisd_client_dbus/: __init__.py  _connection.py  _constants.py  _data.py  _implementation.py  _managedobjects.py  _stratisd_constants.py  _version.py
src/systemd/: bindings.rs  mod.rs
src/util/: macros.rs
src/varlink_api/: api.rs  build.rs  mod.rs  org.storage.stratis1.varlink
stratis-tests/: Cargo.toml  test_config.json
stratis-tests/src/: blockdev_tests.rs  common.rs  main.rs  pool_tests.rs  test_consts.rs
stratisd/: Makefile  README.md  stratis_dbus.c  stratisd.c
stratisd_proc_macros/: Cargo.toml  README.md
stratisd_proc_macros/src/: lib.rs
systemd/: stratis-fstab-setup  stratis-fstab-setup-v2  stratis-fstab-setup-v2@.service.in  stratis-fstab-setup-with-network@.service.in  stratis-fstab-setup@.service  stratis-fstab-setup@.service.in  stratis-key-set  stratis-key-set@.service  stratis-open-rootfs  stratis-rootfs-setup  stratisd-min-postinitrd.service  stratisd-min-postinitrd.service.in  stratisd-min.service  stratisd.service  stratisd.service.in
test/: Makefile  test.c  test.h
test/udev/: main.fmf
tests/: README.md  _misc.py  blockdev_tests.rs  docker_travis_test.sh  engine_test.rs  lineardev_tests.rs  loopbacked_tests.rs  pool_tests.rs  real_tests.rs  stratis_min.rs  stratis_utils.rs  stratisd_min.rs  stratisd_tools.rs  test_config.json.example  test_test.rs  thinpooldev_tests.rs
tests-fmf/: python.fmf  rust.fmf  systemd.fmf
tests-fmf/loop/: main.fmf
tests-fmf/udev/: main.fmf
tests/ci/: stratisd.sh
tests/client-dbus/: .gitignore  .isort.cfg  .travis.yml  MANIFEST.in  Makefile  README.rst  check.py  justfile  pyproject.toml  requirements.txt  setup.py  tox.ini
tests/common/: daemon.rs  logger.rs  mod.rs
tests/dbus/: ._misc.py.swp  _constants.py  _misc.py
tests/manager/: test_create.py  test_destroy.py  test_list.py  test_object_path.py  test_stratis.py
tests/pool/: test_create_filesystem.py  test_destroy_filesystem.py  test_list_devs.py
tests/unit/: test_stratisd_constants.py  test_tables.py
tests/util/: blockdev_tests.rs  blockdev_utils.rs  dm_tests.rs  filesystem_tests.rs  logger.rs  loopbacked.rs  mod.rs  pool_tests.rs  setup_tests.rs  simple_tests.rs  test_config.rs  test_consts.rs  test_result.rs  test_utils.rs
udev/: 11-stratisd.rules  14-stratisd.rules  60-stratisd.rules  61-stratisd.rules  99-stratisd.rules
(+502 files in other folders)
