[package]
name = "stratisd"
version = "3.5.4"
authors = ["Stratis Developers <stratis-devel@lists.fedorahosted.org>"]
edition = "2021"
rust-version = "1.66.1"  # LOWEST SUPPORTED RUST TOOLCHAIN
build = "build.rs"
description = "Stratis daemon"
license = "MPL-2.0"
repository = "https://github.com/stratis-storage/stratisd/"
keywords = ["Linux", "filesystem", "storage"]
categories = ["filesystem"]
exclude = [
    "_typos.toml",
    "docs",
    "dracut",
    ".clippy.toml",
    ".gitignore",
    ".githooks/*",
    ".github/*",
    "systemd",
    "tests",
    "udev",
    "Makefile",
    "Makefile_dependencies",
    "README_tests.md",
    "stratisd.conf"
]

[[bin]]
name = "stratisd"
required-features = ["engine"]

[[bin]]
name = "stratis-dumpmetadata"
required-features = ["engine", "extras", "min"]

[[bin]]
name = "stratis-min"
path = "src/bin/stratis-min/stratis-min.rs"
required-features = ["engine", "min"]

[[bin]]
name = "stratisd-min"
path = "src/bin/stratis-min/stratisd-min.rs"
required-features = ["engine", "min"]

[[bin]]
name = "stratis-str-cmp"
path = "src/bin/udev-lib/stratis-str-cmp.rs"
required-features = ["udev_scripts"]

[[bin]]
name = "stratis-base32-decode"
path = "src/bin/udev-lib/stratis-base32-decode.rs"
required-features = ["udev_scripts"]

[[bin]]
name = "stratis-utils"
required-features = ["engine"]

[dependencies.async-trait]
version = "0.1.51"
optional = true

[dependencies.byteorder]
version = "1.2.3"
optional = true

[dependencies.chrono]
version = "0.4.20"
optional = true
default-features = false
features = ["clock", "std"]

[dependencies.clap]
version = "4.1.0"
optional = true

[dependencies.crc]
version = "3.0.0"
optional = true

[dependencies.data-encoding]
version = "2.3.0"
optional = true

[dependencies.devicemapper]
version = "0.33.4"
optional = true

[dependencies.dbus]
version = "0.9.0"
features = ["futures"]
optional = true

[dependencies.dbus-tree]
version = "0.9.2"
optional = true

[dependencies.either]
version = "1.6.1"
optional = true

[dependencies.env_logger]
version ="0.10.0"
optional = true

[dependencies.futures]
version = "0.3.11"
optional = true

[dependencies.iocuddle]
version = "0.1.0"
optional = true

[dependencies.itertools]
version = "0.10.1"
optional = true

[dependencies.lazy_static]
version = "1.4.0"
optional = true

[dependencies.libblkid-rs]
version = "0.3.0"
optional = true

[dependencies.libc]
version = "0.2.142"
optional = true

[dependencies.libcryptsetup-rs]
version = "0.7.0"
features = ["mutex"]
optional = true

[dependencies.libmount]
version = "0.1.9"
optional = true

[dependencies.libudev]
version = "0.3.0"
optional = true

[dependencies.log]
version = "0.4.14"
optional = true

[dependencies.nix]
version = "0.26.0"
optional = true

[dependencies.pretty-hex]
version = "0.3.0"
optional = true

[dependencies.rand]
version = "0.8.0"
optional = true

[dependencies.regex]
version = "1.5.4"
optional = true

[dependencies.retry]
version = "1.3.1"
optional = true

[dependencies.rpassword]
version = "5.0.0"
optional = true

[dependencies.serde]
version = "1.0.119"
optional = true

[dependencies.serde_derive]
version = "1.0.119"
optional = true

[dependencies.serde_json]
version = "1.0.50"
optional = true

[dependencies.sha2]
version = "0.10.1"
optional = true

[dependencies.stratisd_proc_macros]
version = "0.2.0"
optional = true
path = "./stratisd_proc_macros"

[dependencies.tempfile]
version = "3.0.2"
optional = true

[dependencies.tokio]
version = "1.5.0"
optional = true
features = ["sync", "macros", "rt", "rt-multi-thread", "signal", "net", "time"]

[dependencies.uuid]
version = "1.0.0"
optional = true
features = ["serde", "v4"]

[build-dependencies]
pkg-config = "0.3.18"

[build-dependencies.bindgen]
default_features = false
features = ["runtime"]
version = "0.63.0"
optional = true

[dev-dependencies]
assert_cmd = "2.0.8"
assert_matches = "1.5.0"
env_logger = "0.10.0"
loopdev = "0.4.0"
predicates = "3.0.0"
proptest = "1.0.0"

[features]
engine = [
    "async-trait",
    "byteorder",
    "chrono",
    "clap",
    "crc",
    "data-encoding",
    "devicemapper",
    "either",
    "env_logger",
    "futures",
    "iocuddle",
    "itertools",
    "lazy_static",
    "libblkid-rs",
    "libc",
    "libcryptsetup-rs",
    "libmount",
    "libudev",
    "log",
    "nix",
    "rand",
    "regex",
    "retry",
    "serde",
    "serde_derive",
    "serde_json",
    "sha2",
    "stratisd_proc_macros",
    "tempfile",
    "tokio",
    "uuid"
]
default = ["dbus_enabled", "engine"]
dbus_enabled = ["dbus", "dbus-tree"]
extras = ["pretty-hex"]
min = ["rpassword"]
systemd_compat = ["bindgen"]
udev_scripts = ["data-encoding"]

# FIXME: remove when loopdev dependency lower bound is increased from 0.4.0
[patch.crates-io.loopdev]
git = "https://github.com/mulkieran/loopdev"
branch = "bump-bindgen-reduce-version"
