[package]

name = "stratisd-tests"
version = "0.0.1"
authors = ["Andy Grover <agrover@redhat.com>", "Mulhern <amulhern@redhat.com>", "Todd Gill <tgill@redhat.com>"]
license = "MPL"
repository = "https://github.com/stratis-storage/stratisd"
description = "Tests for stratisd"

[[bin]]
name = "stratis-test"
test = true
doc = false

[dependencies]
rustc-serialize = "0.3.21"
devicemapper = "0.4.0"
log = "0.3"
env_logger = "0.3"
uuid = { version = "0.3.1", features = ["v4"] }

[dependencies.stratisd]
path = "../"

[build-dependencies]
stratisd = {  version = "0.1.0", path = "../" }
