[package]
name = "stratisd_proc_macros"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Stratis daemon procedural macros"
license = "MPL-2.0"
repository = "https://github.com/stratis-storage/stratisd/"
keywords = ["Linux", "filesystem", "storage"]
categories = ["filesystem"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"

[dependencies.syn]
version = "1.0.73"
features = ["full", "extra-traits"]
