[package]
name = "stratisd_proc_macros"
version = "0.2.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Stratis daemon procedural macros"
license = "MPL-2.0"
repository = "https://github.com/stratis-storage/stratisd/"
keywords = ["Linux", "filesystem", "storage"]
categories = ["filesystem"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.75"
quote = "1.0.35"

[dependencies.syn]
version = "2.0.52"
features = ["full", "extra-traits"]

[lints.rust]
warnings = { level = "deny" }
future_incompatible = { level = "deny", priority = 1 }
unused = { level = "deny", priority = 2}
rust_2018_idioms = { level = "deny", priority = 3 }
nonstandard_style = { level = "deny", priority = 4 }

[lints.clippy]
all = { level = "deny" }
cargo = { level = "deny", priority = 1 }
multiple-crate-versions = { level = "allow", priority = 2 }
